Finished creeder, and structure generation!

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"  
 loaderVersion="[35,)"  
-license=""   
+license="All Rights Reserved"   
 issueTrackerURL=""  
  
 [[mods]]  
