--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
 
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
         maven { url "https://maven.tterrag.com/" }
         jcenter()
         mavenCentral()
@@ -9,10 +10,12 @@ buildscript {
 
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
         
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
@@ -59,6 +62,9 @@ minecraft {
         }
     }
 }
+mixin {
+    add sourceSets.main, 'storymobs.mixins.refmap.json'
+}
 
 repositories {
     maven { url 'https://maven.blamejared.com' }
@@ -98,10 +104,11 @@ dependencies {
 jar {
     manifest {
         attributes([
-            "Specification-Title": "Rising Tides",
+            "Specification-Title": "Story Mobs",
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),   
+            "MixinConfigs": "storymobs.mixins.json"
                      
         ])
     }
