--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${forge_version}"
+    annotationProcessor 'org.spongepowered:mixin:0.8.2:processor'
 	
 	//JEI because it is useful
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
