Change name to "Story Mod"

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ issueTrackerURL=""
 [[mods]]  
 modId="storymobs"  
 version="1.16.5-1.0.1"  
-displayName="Story Mobs"  
+displayName="Story Mod"  
 updateJSONURL=""  
 displayURL="https://www.curseforge.com/minecraft/mc-mods/story-mobs"  
 logoFile="storymobs_logo.png"  
