--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'maven-publish'
 
 version = "${mod_version}"
 group = 'me.gentworm.storymobs'
-archivesBaseName = 'storymobs'
+archivesBaseName = 'storymod'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
