--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,12 +1,12 @@
-public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_ #LAND_TRANSFORMING_STRUCTURES
-public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_ #DEFAULT_STRUCTURE_CONFIGS
-public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j #STRUCTURES
-public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #structures
+public-f net.minecraft.world.level.levelgen.feature.StructureFeature f_67031_ #LAND_TRANSFORMING_STRUCTURES
+public-f net.minecraft.world.level.levelgen.StructureSettings f_64580_ #DEFAULT_STRUCTURE_CONFIGS
+public-f net.minecraft.world.level.levelgen.flat.FlatLevelGeneratorSettings f_70349_ #STRUCTURES
+public-f net.minecraft.world.level.levelgen.StructureSettings f_64582_ #structures
 
   
-public net.minecraft.client.particle.DripParticle$Dripping
-public net.minecraft.client.particle.DripParticle$Dripping <init>(Lnet/minecraft/client/world/ClientWorld;DDDLnet/minecraft/fluid/Fluid;Lnet/minecraft/particles/IParticleData;)V
-public net.minecraft.client.particle.DripParticle$FallingLiquidParticle
-public net.minecraft.client.particle.DripParticle$FallingLiquidParticle <init>(Lnet/minecraft/client/world/ClientWorld;DDDLnet/minecraft/fluid/Fluid;Lnet/minecraft/particles/IParticleData;)V
-public net.minecraft.client.particle.DripParticle$Landing
-public net.minecraft.client.particle.DripParticle$Landing <init>(Lnet/minecraft/client/world/ClientWorld;DDDLnet/minecraft/fluid/Fluid;)V
+public net.minecraft.client.particle.DripParticle$DripHangParticle
+public net.minecraft.client.particle.DripParticle$DripHangParticle <init>(Lnet/minecraft/client/world/ClientWorld;DDDLnet/minecraft/fluid/Fluid;Lnet/minecraft/particles/IParticleData;)V
+public net.minecraft.client.particle.DripParticle$FallAndLandParticle
+public net.minecraft.client.particle.DripParticle$FallAndLandParticle <init>(Lnet/minecraft/client/world/ClientWorld;DDDLnet/minecraft/fluid/Fluid;Lnet/minecraft/particles/IParticleData;)V
+public net.minecraft.client.particle.DripParticle$DripLandParticle
+public net.minecraft.client.particle.DripParticle$DripLandParticle <init>(Lnet/minecraft/client/world/ClientWorld;DDDLnet/minecraft/fluid/Fluid;)V
