--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-forge_version=1.16.5-36.0.15
-mappings=20201028-1.16.3
-mod_version=1.16.5-1.0.1
+forge_version=1.18.2-40.1.0
+mappings=1.18.2
+mod_version=1.18.5-1.0
 
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 org.gradle.java.home=C:/Program Files/Java/jdk1.8.0_301
 
 
-jei_version=7.7.0.98
-mc_version=1.16.5
+jei_version=9.7.1.255
+mc_version=1.18.2
